Made wrapper box-sizing border-box to prevent home page width overflow; Changed wrapper max-width to accommodate change from border-box; Quickfix for feed width issue affecting blog page

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -24,7 +24,7 @@ $selected-color:   #7ae2cb !default;
 $table-text-align: left !default;
 
 // Width of the content area
-$content-width:    1280px !default;
+$content-width:    1350px !default;
 
 $on-palm:          600px !default;
 $on-laptop:        800px !default;
